fixed collapsing price and added closing sign

--- a/styles.css
+++ b/styles.css
@@ -28,6 +28,22 @@ html, body, img {
     top: calc(50vh - 300px);
 }
 
+.holiday_close_window{
+    line-height:30px;
+    color:#707070;
+    display:flex;
+    margin:0 auto;
+    margin-left:auto;
+    font-size:64px;
+    position: absolute;
+    right: 14.93px;
+    top: 16.32px;
+    font-weight:100;
+    font-family:'Noto Sans', 'Sans Serif';
+    overflow:hidden;
+    cursor:pointer;
+}
+
 .holiday_modal_text{
     width:450px;
     margin: auto;
@@ -62,6 +78,7 @@ html, body, img {
 
 .holiday_number{
     font-size:140px;
+    line-height:212px;
     letter-spacing: -2.8px;
     font-weight:bold;
 }
@@ -137,6 +154,11 @@ html, body, img {
 
 @media screen and (max-width: 600px) {
     
+    .holiday_close_window{
+        right: 5.93px;
+        top: 6.32px;
+    }
+
     #holiday_popup{
         width:100vw;
     }
@@ -158,6 +180,7 @@ html, body, img {
     }
 
     .holiday_number{
+        line-height:150px;
         font-size:120px;
         letter-spacing: -2.4px;
     }
